# quant_backtest_framework

./: DEVELOPMENT_LOG.md  README.md  dev_plan.md  environment.yml  pyproject.toml
.cursor/skills/quant-backtest-development/: SKILL.md
notebooks/: backtest_template.ipynb  moving_average_backtest_demo.ipynb  price_chart_demo.ipynb
quant_backtest/: __init__.py  cli.py  config.py  engine.py  execution.py  factors.py  performance.py  plotting.py  reporting.py  research.py  strategy.py
quant_backtest/data/: __init__.py  cleaner.py  pools.py  providers.py  repository.py  service.py
tests/: test_cli.py  test_data_cleaner.py  test_data_service.py  test_execution.py  test_factor_engine.py  test_factors.py  test_performance.py  test_plotting.py  test_pools.py  test_providers.py  test_reporting.py  test_repository.py  test_research.py  test_strategy.py
