[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-backtest-framework"
version = "0.1.0"
description = "A small factor backtesting framework backed by MongoDB"
requires-python = ">=3.10"
dependencies = [
    "akshare",
    "lxml",
    "matplotlib",
    "mplfinance",
    "numpy",
    "pandas",
    "pymongo",
    "requests",
    "yfinance",
]

[project.optional-dependencies]
test = [
    "mongomock",
    "pytest",
]
notebook = [
    "ipykernel",
    "jupyterlab",
]

[project.scripts]
quant-backtest = "quant_backtest.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
